# dev-infra

./: .bazelignore  .bazelrc  .bazelrc.common  .editorconfig  .gitignore  .npmrc  .prettierignore  .prettierrc  .pullapprove.yml  .yarnrc.yml  BUILD.bazel  CHANGELOG.md  CHANGELOG_ARCHIVE.md  LICENSE  MODULE.bazel  README.md  REPO.bazel  WORKSPACE  angular.json  index.bzl  package.bzl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.json  tslint.json  yarn-berry.patch
.github/local-actions/: BUILD.bazel  package.json  tsconfig.json
api-gen/extraction/: BUILD.bazel  extract_api_to_json.bzl  index.ts
api-gen/rendering/: BUILD.bazel  entities.ts  index.ts  nunjucks_loader.ts  processing.ts  render-entities.ts  render_api_to_html.bzl  rendering.ts
apps/: .firebaserc  BUILD.bazel  deploy_wrapper_local.sh  firebase.json  firestore.rules  tsconfig.json
apps/account-functions/: BUILD.bazel  before-create.ts  before-sign-in.ts  index.ts
apps/code-of-conduct/: BUILD.bazel  environment.ts  esbuild.config.mjs  index.html  main.ts  package.json  styles.scss
apps/credential-service/: BUILD.bazel  Dockerfile  deploy.sh  package.json
apps/functions/: BUILD.bazel  dist  index.ts  package.json
apps/prs/: BUILD.bazel  karma.conf.js
bazel/: BUILD.bazel  defaults.bzl  extract_js_module_output.bzl  extract_types.bzl  extract_types_rjs.bzl  filter_outputs.bzl  package.json  package.json.tmpl  pnpm-lock.yaml  pnpm-workspace.yaml  setup_dependencies_1.bzl  setup_dependencies_2.bzl  tsconfig.json
bazel/api-gen/: BUILD.bazel  generate_api_docs.bzl  package.json  tsconfig.json
bazel/api-golden/: BUILD.bazel  api_golden_test.bzl  api_golden_test_npm_package.bzl  find_entry_points.ts  index.bzl  index.ts  index_npm_packages.cts  index_npm_packages.ts  index_rjs.bzl  interop_module_mappings.ts  module_mappings.ts  patch-host.ts  path-normalize.ts  test_api_report.ts
bazel/app-bundling/: BUILD.bazel  brotli-compress.cjs  esbuild.config-tmpl.mjs  index.bzl
bazel/benchmark/: BUILD.bazel
bazel/browsers/: BUILD.bazel  README.md  browser_archive_repo.bzl  browser_configure.bzl  browser_repositories.bzl  browser_toolchain_alias.bzl
bazel/constraints/: BUILD.bazel
bazel/esbuild/: BUILD.bazel  esbuild-amd-config.mjs  index.bzl
bazel/git-toolchain/: BUILD.bazel  alias.bzl  toolchain.bzl
bazel/http-server/: BUILD.bazel  ibazel.mts  ibazel.ts  index.bzl  launcher_template.sh  main.mts  main.ts  server.mts  server.ts
bazel/integration/: BUILD.bazel  index.bzl
bazel/jasmine/: BUILD.bazel  jasmine.bzl  stack-traces.mjs  stack-traces.mts
bazel/karma/: BUILD.bazel  index.bzl  karma-debug-config.js
bazel/map-size-tracking/: BUILD.bazel  file_size_compare.ts  file_size_data.ts  index.bzl  index.ts  size_tracker.ts
bazel/markdown_to_html/: BUILD.bazel  index.ts  markdown_to_html.bzl  markdown_to_html.ts
bazel/private/: BUILD.bazel  manifest_path.bzl  path_relative_to_label.bzl
bazel/protos/: BUILD.bazel  test_status_pb.d.ts  test_status_pb.js
bazel/remote-execution/: BUILD.bazel  Dockerfile  README.md  index.bzl
bazel/spec-bundling/: BUILD.bazel  bundle-config.bzl  esbuild.config-tmpl.mjs  index.bzl  index_rjs.bzl  package.json  spec-bundle.bzl  spec-entrypoint.bzl
bazel/tar-toolchain/: BUILD.bazel
bazel/test/: BUILD.bazel  extract_js_module_test.js  extract_types_test.js  fixture.ts  fixture.txt  transitive_file.ts
bazel/ts_project/: BUILD.bazel  index.bzl
bazel/validation/: BUILD.bazel  defs.bzl  verify-prettierignore.mjs  verify-typescript.mjs
circleci-orb/: .gitignore  @orb.yml  BUILD.bazel  index.bzl  pack-orb-script.mjs  publish.sh
circleci-orb/commands/: rebase-on-target-branch.yml  rebase-pr-on-target-branch.yml  setup-bazel-remote-exec.yml
docs/: BUILD.bazel  index.bzl  index.ts  package.json  process.md  public-api.ts
docs/components/: BUILD.bazel  index.ts
docs/constants/: BUILD.bazel  index.ts
docs/directives/: BUILD.bazel  index.ts
docs/editor/: BUILD.bazel  embedded-editor.component.scss  embedded-editor.component.spec.ts  embedded-editor.component.ts  index.ts
docs/icons/: BUILD.bazel
docs/interfaces/: BUILD.bazel  docs-content-loader.ts  environment.ts  index.ts  tutorial.ts
docs/markdown/: BUILD.bazel  _guides.bzl  _playground.bzl  _stackblitz.bzl  _tutorial.bzl  _zip.bzl
docs/pipeline/: BUILD.bazel  _guides.bzl  _playground.bzl  _stackblitz.bzl  _tutorial.bzl  _zip.bzl
docs/pipes/: BUILD.bazel  index.ts  is-active-navigation-item.pipe.ts  relative-link.pipe.ts
docs/providers/: BUILD.bazel  docs-content-loader.ts  environment.ts  example-viewer-content-loader.ts  index.ts  previews-components.ts
docs/services/: BUILD.bazel  index.ts  navigation-state.service.ts  search.service.ts  table-of-contents-loader.service.spec.ts  table-of-contents-loader.service.ts  table-of-contents-scroll-spy.service.spec.ts  table-of-contents-scroll-spy.service.ts
docs/styles/: BUILD.bazel  _api-item-label.scss  _kbd.scss  _resets.scss  global-styles.scss
docs/testing/: BUILD.bazel
docs/utils/: BUILD.bazel  filesystem.utils.ts  index.ts  navigation.utils.ts  testing-helper.ts  zip.utils.ts
github-actions/: BUILD.bazel  package.json  tsconfig.json  utils.ts
github-actions/app-auth/: action.yml  package.json  rollup.config.js  tsconfig.json
github-actions/branch-manager/: BUILD.bazel  action.yml  main.js  package.json
github-actions/breaking-changes-label/: BUILD.bazel  action.yml  bundle.js  main.js  main.ts  post.js
github-actions/browserstack/: BUILD.bazel  action.yml  browserstack_token.data  constants.ts  index.ts  (+4 more)
ng-dev/: BUILD.bazel  build-worker.js  cli.ts  index.ts  package.json  package.json.tmpl  tsconfig.json
tools/: BUILD.bazel  build-all.sh  defaults.bzl  defaults2.bzl  defaults_new.bzl  esbuild.bzl  generate_ts_proto_module.bzl  inline-package-json-deps.js  local-dev.sh  package.json  publish_to_github.sh  sync-all-modules.sh  update-generated-files.ts
tslint-rules/: BUILD.bazel  noImplicitOverrideAbstractRule.ts  package.json.tmpl  tsNodeLoaderRule.js  validateImportForEsmCjsInteropRule.ts
(+1710 files in other folders)
