load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@devinfra_npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

exports_files([
    "package.json",
    ".yarnrc.yml",
])

js_binary(
    name = "yarn_berry_vendored",
    data = [".yarn/releases/yarn-4.9.1.cjs"],
    entry_point = ".yarn/releases/yarn-4.9.1.cjs",
    visibility = ["//bazel/integration/tests:__subpackages__"],
)

js_binary(
    name = "yarn_classic_vendored",
    data = [".yarn/releases/yarn-1.22.17.cjs"],
    entry_point = ".yarn/releases/yarn-1.22.17.cjs",
    visibility = ["//bazel/integration/tests:__subpackages__"],
)
