load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@devinfra_npm//:defs.bzl", "npm_link_all_packages")
load("//bazel/validation:defs.bzl", "validate_ts_version_matching")

npm_link_all_packages()

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

exports_files([
    "package.json",
])

js_binary(
    name = "yarn_berry_vendored",
    data = [".yarn/releases/yarn-4.9.1.cjs"],
    entry_point = ".yarn/releases/yarn-4.9.1.cjs",
    visibility = ["//bazel/integration/tests:__subpackages__"],
)

js_binary(
    name = "yarn_classic_vendored",
    data = [".yarn/releases/yarn-1.22.17.cjs"],
    entry_point = ".yarn/releases/yarn-1.22.17.cjs",
    visibility = ["//bazel/integration/tests:__subpackages__"],
)

validate_ts_version_matching(
    module_lock_file = "MODULE.bazel.lock",
    package_json = "package.json",
)
