"""Rules/toolchains for devinfra with Bazel."""

module(
    name = "devinfra",
)

register_toolchains(
    "//bazel/git-toolchain:git_linux_toolchain",
    "//bazel/git-toolchain:git_macos_x86_toolchain",
    "//bazel/git-toolchain:git_macos_arm64_toolchain",
)

bazel_dep(name = "yq.bzl", version = "0.3.6")
bazel_dep(name = "tar.bzl", version = "0.10.5")
bazel_dep(name = "bazel_lib", version = "3.3.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "aspect_rules_js", version = "3.2.2")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_rules_jasmine", version = "2.0.4")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "aspect_rules_esbuild", version = "0.26.0")
bazel_dep(name = "aspect_rules_ts", version = "3.8.11")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "rules_browsers")
local_path_override(
    module_name = "rules_browsers",
    path = "bazel/rules/rules_browsers",
)

bazel_dep(name = "rules_sass", dev_dependency = True)
local_path_override(
    module_name = "rules_sass",
    path = "bazel/rules/rules_sass",
)

bazel_dep(name = "rules_angular", dev_dependency = True)
local_path_override(
    module_name = "rules_angular",
    path = "bazel/rules/rules_angular",
)

yq = use_extension("@yq.bzl//yq:extensions.bzl", "yq")
use_repo(yq, "yq_toolchains")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(
    # Obtained by: curl --silent https://registry.npmjs.org/typescript/5.9.3 | jq -r '.dist.integrity'
    ts_integrity = "sha512-y2TvuxSZPDyQakkFRPZHKFm+KKVqIisdg9/CZwm9ftvKXLP8NRWj38/ODjNbr43SsoXqNuAisEf1GdCxqWcdBw==",
    ts_version = "6.0.3",
)
use_repo(rules_ts_ext, "npm_typescript")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    node_repositories = {
        "24.17.0-darwin_arm64": ("node-v24.17.0-darwin-arm64.tar.gz", "node-v24.17.0-darwin-arm64", "4fc3266a3702eebc39cc37661cf4eeceeade307e242ab64e4d7ce7949197e11f"),
        "24.17.0-darwin_amd64": ("node-v24.17.0-darwin-x64.tar.gz", "node-v24.17.0-darwin-x64", "80da552fe037290cb130e9dea590f5eeeb7aa450636f0c89ab41415511c1ec27"),
        "24.17.0-linux_arm64": ("node-v24.17.0-linux-arm64.tar.xz", "node-v24.17.0-linux-arm64", "67324b9e515e7d13da72571a5dd522bb23145a820f7dde15497897e466759ab3"),
        "24.17.0-linux_ppc64le": ("node-v24.17.0-linux-ppc64le.tar.xz", "node-v24.17.0-linux-ppc64le", "7657dfb803132a05cfc83353f43f603cba790e1d2366caeb36083aa8f351124b"),
        "24.17.0-linux_s390x": ("node-v24.17.0-linux-s390x.tar.xz", "node-v24.17.0-linux-s390x", "a8e6f79fac2e17e5a9a9d479bad3b6f19921049bbb5888fa238347427502f23c"),
        "24.17.0-linux_amd64": ("node-v24.17.0-linux-x64.tar.xz", "node-v24.17.0-linux-x64", "ab343a1b747c7cbf3630dfd7dbf818c5423fab2eb4f5ad1afc896f6bd121a917"),
        "24.17.0-windows_amd64": ("node-v24.17.0-win-x64.zip", "node-v24.17.0-win-x64", "f2aa33b35b75aca5f3f7b85675a6f6423201053e9381911e64961f3bda2528ab"),
    },
    node_version = "24.17.0",
)
use_repo(node, "nodejs_toolchains")

rules_angular = use_extension("@rules_angular//setup:extensions.bzl", "rules_angular", dev_dependency = True)
rules_angular.setup(
    name = "dev_infra_rules_angular_configurable_deps",
    angular_compiler_cli = "//:node_modules/@angular/compiler-cli",
    typescript = "//:node_modules/typescript",
)
use_repo(rules_angular, rules_angular_configurable_deps = "dev_infra_rules_angular_configurable_deps")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(
    name = "pnpm",
    pnpm_version = "11.6.0",
    pnpm_version_integrity = "sha512-mjZRgiQIDG/lFlr9z+eb+hGMKb5wPz9GKx4y7+HpjkfodQsUjggoYlCq1BE8x5k8pBPE4s1Ed1JwjC7ldRvJXw==",
)
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "devinfra_npm",
    data = [
        "@devinfra//.github/local-actions:package.json",
        "@devinfra//.github/local-actions/branch-manager:package.json",
        "@devinfra//.github/local-actions/labels-sync:package.json",
        "@devinfra//.github/local-actions/lock-closed:package.json",
        "@devinfra//:package.json",
        "@devinfra//:pnpm-workspace.yaml",
        "@devinfra//apps/code-of-conduct:package.json",
        "@devinfra//apps/functions:package.json",
        "@devinfra//bazel:package.json",
        "@devinfra//bazel/spec-bundling/test:package.json",
        "@devinfra//github-actions:package.json",
        "@devinfra//github-actions/bazel/configure-remote:package.json",
        "@devinfra//github-actions/branch-manager:package.json",
        "@devinfra//github-actions/browserstack:package.json",
        "@devinfra//github-actions/google-internal-tests:package.json",
        "@devinfra//github-actions/labeling/issue:package.json",
        "@devinfra//github-actions/labeling/pull-request:package.json",
        "@devinfra//github-actions/org-file-sync:package.json",
        "@devinfra//github-actions/post-approval-changes:package.json",
        "@devinfra//github-actions/previews/pack-and-upload-artifact:package.json",
        "@devinfra//github-actions/previews/upload-artifacts-to-firebase:package.json",
        "@devinfra//github-actions/saucelabs:package.json",
        "@devinfra//github-actions/unified-status-check:package.json",
        "@devinfra//ng-dev:package.json",
    ],
    pnpm_lock = "@devinfra//:pnpm-lock.yaml",
)
use_repo(npm, "devinfra_npm")
