load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin", "nodejs_binary")

copy_to_bin(
    name = "static_runfiles",
    srcs = [
        ".firebaserc",
        "firebase.json",
        "firestore.indexes.json",
        "firestore.rules",
    ],
)

nodejs_binary(
    name = "serve",
    chdir = package_name(),
    data = [
        # top-level static runfiles
        ":static_runfiles",

        # Firebase function files
        "//apps/functions:functions_compiled",
        "//apps/functions:functions_files",

        # Firebase hosted application files
        "//apps/code-of-conduct:application_files",
    ],
    entry_point = "@npm//:node_modules/firebase-tools/lib/bin/firebase.js",
    tags = ["ibazel_notify_changes"],
    templated_args = [
        "--project",
        "internal-200822",
        "--config",
        # TODO: Find a way to do this without relying on the copy_to_bin that works cross platform.
        "$$(rlocation dev-infra/apps/firebase.json)",
        "emulators:start",
    ],
)

nodejs_binary(
    name = "deploy",
    chdir = package_name(),
    data = [
        # top-level static runfiles
        ":static_runfiles",

        # Firebase function files
        "//apps/functions:functions_compiled",
        "//apps/functions:functions_files",
    ],
    entry_point = "@npm//:node_modules/firebase-tools/lib/bin/firebase.js",
    templated_args = [
        "--project",
        "internal-200822",
        "--config",
        # TODO: Find a way to do this without relying on the copy_to_bin that works cross platform.
        "$$(rlocation dev-infra/apps/firebase.json)",
        "deploy",
        "--only",
        "functions",
    ],
)
