load("@devinfra_npm//:firebase-tools/package_json.bzl", firebase = "bin")
load("//tools:defaults2.bzl", "copy_to_bin", "ts_config")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = [
        "//apps:__subpackages__",
    ],
)

copy_to_bin(
    name = "static_runfiles",
    srcs = [
        ".firebaserc",
        "firebase.json",
        "firestore.indexes.json",
        "firestore.rules",
    ],
)

firebase.firebase_binary(
    name = "serve",
    chdir = package_name(),
    data = [
        # top-level static runfiles
        ":static_runfiles",

        # Firebase function files
        "//apps/functions:functions_files",

        # Firebase hosted application files
        "//apps/code-of-conduct:application_files",
    ],
    fixed_args = [
        "--project",
        "internal-200822",
        "--config",
        "firebase.json",
        "emulators:start",
    ],
    tags = ["ibazel_notify_changes"],
)

firebase.firebase_binary(
    name = "deploy",
    chdir = package_name(),
    data = [
        # top-level static runfiles
        ":static_runfiles",

        # Firebase function files
        "//apps/functions:functions_files",

        # Firebase hosted application files
        "//apps/code-of-conduct:application_files",
        "//:node_modules/firebase-functions",
    ],
    fixed_args = [
        "--project",
        "internal-200822",
        "--config",
        "firebase.json",
        "deploy",
    ],
)
