filegroup(
    name = "static_files",
    srcs = [
        "BUILD.bazel",
        "expand_template.bzl",
        "extract_js_module_output.bzl",
        "extract_types.bzl",
        "filter_outputs.bzl",
        "//bazel/api-gen:files",
        "//bazel/api-golden:files",
        "//bazel/app-bundling:files",
        "//bazel/benchmark:files",
        "//bazel/browsers:files",
        "//bazel/constraints:files",
        "//bazel/esbuild:files",
        "//bazel/git-toolchain:files",
        "//bazel/http-server:files",
        "//bazel/integration:files",
        "//bazel/karma:files",
        "//bazel/map-size-tracking:files",
        "//bazel/markdown_to_html:files",
        "//bazel/private:files",
        "//bazel/remote-execution:files",
        "//bazel/spec-bundling:files",
    ],
    visibility = ["//:npm"],
)
