load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@devinfra_npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//bazel:__subpackages__"],
)

filegroup(
    name = "static_files",
    srcs = [
        "BUILD.bazel",
        "defaults.bzl",
        "expand_template.bzl",
        "extract_js_module_output.bzl",
        "extract_types.bzl",
        "filter_outputs.bzl",
        "//bazel/api-golden:files",
        "//bazel/app-bundling:files",
        "//bazel/browsers:files",
        "//bazel/constraints:files",
        "//bazel/esbuild:files",
        "//bazel/git-toolchain:files",
        "//bazel/http-server:files",
        "//bazel/karma:files",
        "//bazel/map-size-tracking:files",
        "//bazel/private:files",
        "//bazel/remote-execution:files",
        "//bazel/spec-bundling:files",
        "//bazel/ts_project:files",
    ],
    visibility = ["//:npm"],
)
