ORB_NAME = "angular/dev-infra"

ORB_VERSION = "0.0.4"

filegroup(
    name = "orb_generated_files",
    srcs = [
        "//circleci-orb/scripts/rebase-pr-on-target-branch:script",
    ],
)

sh_binary(
    name = "publish",
    srcs = ["publish.sh"],
    args = [
        ORB_NAME,
        ORB_VERSION,
    ],
    data = [":orb_generated_files"],
)
