load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

ORB_NAME = "angular/dev-infra"

ORB_VERSION = "1.0.8"

nodejs_binary(
    name = "pack_orb_script",
    entry_point = "pack-orb-script.mjs",
    templated_args = [
        "--nobazel_run_linker",
    ],
    visibility = ["//circleci-orb:__subpackages__"],
)

filegroup(
    name = "orb_generated_files",
    srcs = [
        "//circleci-orb/scripts/rebase-pr-on-target-branch:script",
        "//circleci-orb/scripts/setup-bazel-remote-exec:script",
    ],
)

sh_binary(
    name = "publish",
    srcs = ["publish.sh"],
    args = [
        ORB_NAME,
        ORB_VERSION,
    ],
    data = [":orb_generated_files"],
)
