load("//tools:defaults.bzl", "ng_module")
load("@npm//@angular/bazel:index.bzl", "ng_package")
load("//:package.bzl", "NPM_PACKAGE_SUBSTITUTIONS")

ng_module(
    name = "docs",
    srcs = [
        "index.ts",
    ],
    deps = [
        "//docs/components",
        "//docs/constants",
        "//docs/directives",
        "//docs/editor",
        "//docs/interfaces",
        "//docs/pipes",
        "//docs/providers",
        "//docs/services",
        "//docs/utils",
    ],
)

ng_package(
    name = "npm_package",
    srcs = [
        "index.bzl",
        "package.json",
        "//docs/editor/code-editor/workers:bundle.js",
        "//docs/icons",
        "//docs/markdown:BUILD.bazel",
        "//docs/markdown:_guides.bzl",
        "//docs/markdown:_stackblitz.bzl",
        "//docs/markdown:guides.mjs",
        "//docs/markdown:stackblitz.mjs",
        "//docs/markdown/examples/template:files",
        "//docs/styles",
    ],
    substitutions = NPM_PACKAGE_SUBSTITUTIONS,
    deps = [
        ":docs",
    ],
)
