load("//tools:defaults.bzl", "ng_module")
load("@npm//@angular/bazel:index.bzl", "ng_package")
load("//:package.bzl", "NPM_PACKAGE_SUBSTITUTIONS")

ng_module(
    name = "docs",
    srcs = [
        "index.ts",
    ],
    deps = [
        "//docs/components",
        "//docs/constants",
        "//docs/directives",
        "//docs/interfaces",
        "//docs/pipes",
        "//docs/providers",
        "//docs/services",
        "//docs/utils",
    ],
)

ng_package(
    name = "npm_package",
    srcs = [
        "index.bzl",
        "package.json",
        "//docs/icons",
        "//docs/pipeline:BUILD.bazel",
        "//docs/pipeline:_guides.bzl",
        "//docs/pipeline:_playground.bzl",
        "//docs/pipeline:_stackblitz.bzl",
        "//docs/pipeline:_tutorial.bzl",
        "//docs/pipeline:guides.mjs",
        "//docs/pipeline:guides-no-mermaid.mjs",
        "//docs/pipeline:playground.mjs",
        "//docs/pipeline:stackblitz.mjs",
        "//docs/pipeline:tutorial.mjs",
        "//docs/pipeline/examples/template:files",
        "//docs/pipeline/tutorials/common:files",
        "//docs/styles",
    ],
    substitutions = NPM_PACKAGE_SUBSTITUTIONS,
    deps = [
        ":docs",
        "//docs/testing",
    ],
)
