load("//tools:defaults.bzl", "ts_library")
load("//tools:defaults2.bzl", "ts_config")

package(default_visibility = ["//github-actions:__subpackages__"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:rjs-tsconfig",
    ],
)

ts_config(
    name = "tsconfig_test",
    src = "tsconfig-test.json",
    deps = [
        ":tsconfig",
    ],
)

ts_library(
    name = "utils",
    srcs = [
        "utils.ts",
    ],
    visibility = [
        "//.github/local-actions:__subpackages__",
        "//github-actions:__subpackages__",
    ],
    deps = [
        "@npm//@actions/core",
        "@npm//@actions/github",
        "@npm//@octokit/auth-app",
        "@npm//@octokit/rest",
        "@npm//@types/node",
    ],
)
