load("//tools:defaults.bzl", "ts_config", "ts_project")

package(default_visibility = ["//github-actions:__subpackages__"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:node_modules/@types/node",
        "//:tsconfig",
    ],
)

ts_config(
    name = "tsconfig_test",
    src = "tsconfig-test.json",
    deps = [
        ":tsconfig",
        "//:node_modules/@types/jasmine",
    ],
)

ts_project(
    name = "utils",
    srcs = [
        "utils.ts",
    ],
    tsconfig = ":tsconfig",
    visibility = [
        "//.github/local-actions:__subpackages__",
        "//github-actions:__subpackages__",
    ],
    deps = [
        "//:node_modules/@actions/core",
        "//:node_modules/@actions/github",
        "//:node_modules/@octokit/auth-app",
        "//:node_modules/@octokit/rest",
        "//:node_modules/@types/node",
    ],
)
